# RIF-website

./: .gitignore  CHANGELOG.md  README.MD  README.md  docs.html  example.html  fills.json  generate_packs.py  index.html  manifest.json  patch_endian.py  patch_endian_arm.py  plan.md  pyproject.toml  release-parser.js  releases.html  store.amd64.pack  styles.css  test.js  test.py  test.rif  test_extract.py  theme-engine.js
docs/: PACK_FORMAT.md
examples/atari2600/: README_navecitas.md  build.json  doc.json  main.a26asm  syntaxs.json
examples/atari2600/code/: main.rif  navecitas.rif
examples/atari2600/pack/: atari2600.pack  navecitas.pack
examples/gba/: README.md  build.bat  build.json  fills.json  syntaxs.json  test.rif  test_build.py
examples/gba/assets/: logo.pbm
examples/gba/code/: game.rif  main.data.gbasm  main.gbasm  main.header.gbasm  main.rodata.gbasm
examples/gba/pack/: gba.pack
examples/megadrive/: main.mdasm
gba/: doc.json
gba/code/: hello.rif
gba/pack/: gba.pack
pack_compiler/: errors.py
releases/: stable1-005.html
rif/: __init__.py  __main__.py  bitbuffer.py  cli.py  compiler.py  dedicated.py  errors.py  fillables.py  lexer.py  linker.py  models.py  package_packer.py  packer.py  parser.py  plugin_security.py  resolver.py  source_reader.py  system_install.py  table_modify.py
rif/compiler/: __init__.py  checkers.py  comparer.py  compile_at.py  compiler.py  conversors.py  end_instruction.py  executers.py  imports.py  memory.py  parser.py  resolvers.py  runtime.py
rif/help/: README.md  index.html
rif/plugins/: cache_store.py
rif/plugins/amd64/: compiler.py  pack.json
rif/plugins/atari2600/: README.md  __init__.py  cli.py  extern-documentation.html  pack.json
rif/plugins/basics/: cli.py  pack.json  readme.md
rif/plugins/color/: pack.json
rif/plugins/fonts/: README.md  README_FONTS_PLUGIN.md  cli.py  fillables.py  pack.json
rif/plugins/gba/: README.md  README_GBA_MIN.md  cli.py  extern-documentation.html  fillables.py  pack.json  pendings.md
rif/plugins/image/: cli.py  fillables.py  pack.json
rif/plugins/megadrive/: README.md  __init__.py  cli.py  ext.mdasm  extern-documentation.html  pack.json
tests/: test_arrays.py  test_atari2600.py  test_basics.py  test_basics_cli.py  test_build_ux.py  test_conditional_need.py  test_examples.py  test_fonts.py  test_freezing.py  test_gba_example.py  test_headers.py  test_help.py  test_plugins.py  test_relocations.py  test_sections_layout.py  test_source_reader.py
(+194 files in other folders)
