[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rif-pack-compiler"
version = "0.1.0"
description = "Retargetable ISA Foundry pack compiler"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GrandKenzy" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
pack-compiler = "pack_compiler.cli:run"

[tool.setuptools.packages.find]
include = ["pack_compiler*"]
